--- a/product.html
+++ b/product.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="android-chrome-192x192.png">
     <script src="https://kit.fontawesome.com/cf540676fa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Trang Bricks</title>
     <style>
 
@@ -29,7 +29,7 @@
         <!-- NAVIGATION BAR -->
         <nav class="navbar-lower">
             <!-- LOGO -->
-            <img class="logo" src="/android-chrome-192x192.png" alt="">
+            <img class="logo" src="android-chrome-192x192.png" alt="">
             <!-- NAVIGATION MENU -->
             <ul class="nav-links">
                 <!-- USING CHECKBOX HACK -->
@@ -37,10 +37,10 @@
                 <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                 <!-- NAVIGATION MENUS -->
                 <div class="menu">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li class="products">
-                        <a href="/product.html">Products</a>
+                        <a href="product.html">Products</a>
                         <!-- DROPDOWN MENU -->
                         <ul class="dropdown">
                             <li><a href="/">Fly ash brick making machine</a></li>
@@ -52,9 +52,9 @@
                             <li><a href="/">Front End Loader</a></li>
                         </ul>
                     </li>
-                    <li><a href="/flyash.html">FlyAsh Technology</a></li>
-                    <li><a href="/gallery.html">Gallery</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="flyash.html">FlyAsh Technology</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </div>
             </ul>
         </nav>
@@ -101,7 +101,7 @@
         </div>
         <div class="broucher">
             <h1><span>Company</span>Broucher</h1>
-            <img src="/img-broucher.jpg" alt="">
+            <img src="img-broucher.jpg" alt="">
             <!-- <button><i class="fa-solid fa-file-pdf"></i>Download pdf</button> -->
             <a href="karmyog.pdf?file=/karmyog"><i class="fa-solid fa-file-pdf"></i>Download pdf</a>
         </div>
@@ -117,12 +117,12 @@
         <div class="footer-upper">
             <div class="quick-link">
                 <h1><span>Quick </span>Links</h1>
-                <a href="/index.html"><i class="fa-solid fa-angle-right"></i> Home</a>
-                <a href="/about.html"><i class="fa-solid fa-angle-right"></i> About Us</a>
-                <a href="/product.html"><i class="fa-solid fa-angle-right"></i> Products</a>
-                <a href="/flyash.html"><i class="fa-solid fa-angle-right"></i> Fly Ash Technology</a>
-                <a href="/gallery.html"><i class="fa-solid fa-angle-right"></i> Gallery</a>
-                <a href="/contact.html"><i class="fa-solid fa-angle-right"></i> Contact Us</a>
+                <a href="index.html"><i class="fa-solid fa-angle-right"></i> Home</a>
+                <a href="about.html"><i class="fa-solid fa-angle-right"></i> About Us</a>
+                <a href="product.html"><i class="fa-solid fa-angle-right"></i> Products</a>
+                <a href="flyash.html"><i class="fa-solid fa-angle-right"></i> Fly Ash Technology</a>
+                <a href="gallery.html"><i class="fa-solid fa-angle-right"></i> Gallery</a>
+                <a href="contact.html"><i class="fa-solid fa-angle-right"></i> Contact Us</a>
                 <div class="link">
                     <a href="https://www.facebook.com/people/Flyash-Brick-Manufacturers/100078668187770/"><i
                             class="fa-brands fa-facebook-f"></i></a>
