--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="android-chrome-192x192.png">
     <script src="https://kit.fontawesome.com/cf540676fa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Trang Bricks</title>
     <style>
 
@@ -29,7 +29,7 @@
         <!-- NAVIGATION BAR -->
         <nav class="navbar-lower">
             <!-- LOGO -->
-            <img class="logo" src="/android-chrome-192x192.png" alt="">
+            <img class="logo" src="android-chrome-192x192.png" alt="">
             <!-- NAVIGATION MENU -->
             <ul class="nav-links">
                 <!-- USING CHECKBOX HACK -->
@@ -38,9 +38,9 @@
                 <!-- NAVIGATION MENUS -->
                 <div class="menu">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li class="products">
-                        <a href="/product.html">Products</a>
+                        <a href="product.html">Products</a>
                         <!-- DROPDOWN MENU -->
                         <ul class="dropdown">
                             <li><a href="/">Fly ash brick making machine</a></li>
@@ -52,18 +52,18 @@
                             <li><a href="/">Front End Loader</a></li>
                         </ul>
                     </li>
-                    <li><a href="/flyash.html">FlyAsh Technology</a></li>
-                    <li><a href="/gallery.html">Gallery</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="flyash.html">FlyAsh Technology</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </div>
             </ul>
         </nav>
     </header>
     <section class="home">
-        <img class="mySlides" src="/1.jpg">
-        <img class="mySlides" src="/2.jpg">
-        <img class="mySlides" src="/3.jpg">
-        <img class="mySlides" src="/4.jpg">
+        <img class="mySlides" src="1.jpg">
+        <img class="mySlides" src="2.jpg">
+        <img class="mySlides" src="3.jpg">
+        <img class="mySlides" src="4.jpg">
     </section>
     <section class="welcome-home">
         <h1><span>Welcome </span>To Trang Bricks</h1>
@@ -128,7 +128,7 @@
         <div class="slides">
             <div class="slide" id="slide-1">
                 <div class="dp">
-                    <img src="/1p.jpeg">
+                    <img src="1p.jpeg">
                 </div>
                 <div class="slide-specification">
                     <h3>Manual Trolley</h3>
@@ -140,7 +140,7 @@
             </div>
             <div class="slide" id="slide-2">
                 <div class="dp">
-                    <img src="/2p.jpeg">
+                    <img src="2p.jpeg">
                 </div>
                 <div class="slide-specification">
                     <h3>Hydraulic Trolley</h3>
@@ -152,7 +152,7 @@
             </div>
             <div class="slide" id="slide-3">
                 <div class="dp">
-                    <img src="/5p.jpeg">
+                    <img src="5p.jpeg">
                 </div>
                 <div class="slide-specification">
                     <h3>Automatic Vibrator Machine</h3>
@@ -166,7 +166,7 @@
             </div>
             <div class="slide" id="slide-4">
                 <div class="dp">
-                    <img src="/3p.jpeg">
+                    <img src="3p.jpeg">
                 </div>
                 <div class="slide-specification">
                     <h3>Colour Mixer (Rabadi)</h3>
@@ -181,7 +181,7 @@
             </div>
             <div class="slide" id="slide-5">
                 <div class="dp">
-                    <img src="/4p.jpeg">
+                    <img src="4p.jpeg">
                 </div>
                 <div class="slide-specification">
                     <h3>Manual Trolley</h3>
@@ -226,17 +226,17 @@
             <div class="says">
                 <p>One of the well known industry of kutch. Trang Bricks has a well equipped warehousing unit and
                     efficient staff which enable it to meet bulk orders on time with precision. </p>
-                <img src="/sufyan.jpg" alt="">
+                <img src="sufyan.jpg" alt="">
                 <h4>Sufyan Ahmad Ansari</h4>
             </div>
             <div class="says">
                 <p>Good work</p>
-                <img src="/sufyan.jpg" alt="">
+                <img src="sufyan.jpg" alt="">
                 <h4>Faisal Khan</h4>
             </div>
             <div class="says">
                 <p>O My God.</p>
-                <img src="/sufyan.jpg" alt="">
+                <img src="sufyan.jpg" alt="">
                 <h4>Jafar Raza Khan</h4>
             </div>
         </div>
@@ -255,7 +255,7 @@
         </div>
         <div class="broucher">
             <h1><span>Company</span>Broucher</h1>
-            <img src="/img-broucher.jpg" alt="">
+            <img src="img-broucher.jpg" alt="">
             <!-- <button><i class="fa-solid fa-file-pdf"></i>Download pdf</button> -->
             <a href="karmyog.pdf?file=/karmyog"><i class="fa-solid fa-file-pdf"></i>Download pdf</a>
         </div>
@@ -271,12 +271,12 @@
         <div class="footer-upper">
             <div class="quick-link">
                 <h1><span>Quick </span>Links</h1>
-                <a href="/index.html"><i class="fa-solid fa-angle-right"></i> Home</a>
-                <a href="/about.html"><i class="fa-solid fa-angle-right"></i> About Us</a>
-                <a href="/product.html"><i class="fa-solid fa-angle-right"></i> Products</a>
-                <a href="/flyash.html"><i class="fa-solid fa-angle-right"></i> Fly Ash Technology</a>
-                <a href="/gallery.html"><i class="fa-solid fa-angle-right"></i> Gallery</a>
-                <a href="/contact.html"><i class="fa-solid fa-angle-right"></i> Contact Us</a>
+                <a href="index.html"><i class="fa-solid fa-angle-right"></i> Home</a>
+                <a href="about.html"><i class="fa-solid fa-angle-right"></i> About Us</a>
+                <a href="product.html"><i class="fa-solid fa-angle-right"></i> Products</a>
+                <a href="flyash.html"><i class="fa-solid fa-angle-right"></i> Fly Ash Technology</a>
+                <a href="gallery.html"><i class="fa-solid fa-angle-right"></i> Gallery</a>
+                <a href="contact.html"><i class="fa-solid fa-angle-right"></i> Contact Us</a>
                 <div class="link">
                     <a href="https://www.facebook.com/people/Flyash-Brick-Manufacturers/100078668187770/"><i
                             class="fa-brands fa-facebook-f"></i></a>
